--- a/style.css
+++ b/style.css
@@ -533,7 +533,7 @@ margin:35px 60px 25px 60px;
 }
 
 .newsabout ul li {
-	list-style-image: url('/FigmaMEDI_copy/img/midimg/svg/ul.svg');
+	list-style-image: url('img/midimg/svg/ul.svg');
 	margin-bottom: 14px;
 	font-size: 14px;
 	font-weight: 500;
